data/week-03/aws_normalised_evidence/security_groups.normalized.json
{
  "collected_at": "2026-01-30T04:25:55Z",
  "collector": "aws_cli",
  "collector_version": "week-03-lab3.2-v1",
  "cloud_account": "797333189577",
  "region": "us-east-1",
  "evidence_object": "security_groups",
  "evidence_type": "configuration_state",
  "related_assertions": [
    "POS-03"
  ],
  "raw_evidence": {
    "SecurityGroups": [
      {
        "GroupId": "sg-01b8dab95b6f994fd",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-b9668fc4",
        "SecurityGroupArn": "arn:aws:ec2:us-east-1:797333189577:security-group/sg-01b8dab95b6f994fd",
        "OwnerId": "797333189577",
        "GroupName": "launch-wizard-1",
        "Description": "launch-wizard-1 created 2020-07-19T20:01:29.550+08:00",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "39.109.188.40/32"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-0c5a88865502a97b8",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-b9668fc4",
        "SecurityGroupArn": "arn:aws:ec2:us-east-1:797333189577:security-group/sg-0c5a88865502a97b8",
        "OwnerId": "797333189577",
        "GroupName": "launch-wizard-3",
        "Description": "launch-wizard-3 created 2025-07-10T23:38:52.140Z",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-06b1e4c95d5001917",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-b9668fc4",
        "SecurityGroupArn": "arn:aws:ec2:us-east-1:797333189577:security-group/sg-06b1e4c95d5001917",
        "OwnerId": "797333189577",
        "GroupName": "launch-wizard-2",
        "Description": "launch-wizard-2 created 2020-07-20T20:48:11.445+08:00",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      },
      {
        "GroupId": "sg-e5803edc",
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ],
        "VpcId": "vpc-b9668fc4",
        "SecurityGroupArn": "arn:aws:ec2:us-east-1:797333189577:security-group/sg-e5803edc",
        "OwnerId": "797333189577",
        "GroupName": "default",
        "Description": "default VPC security group",
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "UserIdGroupPairs": [
              {
                "UserId": "797333189577",
                "GroupId": "sg-e5803edc"
              }
            ],
            "IpRanges": [],
            "Ipv6Ranges": [],
            "PrefixListIds": []
          }
        ]
      }
    ]
  }
}
